--- a/code/Blazora/Components/BGenerator_Header_Pickaxe.razor
+++ b/code/Blazora/Components/BGenerator_Header_Pickaxe.razor
@@ -42,7 +42,7 @@
     
     protected override void OnInitialized ()
     {
-        this.id = $"BGenerator_Header_Pickaxe {get_result_resource_name ()}";
+        this.id = $"BGenerator_Header_Pickaxe [{get_result_resource_name ()}]";
         base.OnInitialized ();
     }
 
