--- a/code/Blazora/Components/BGenerator_Header_Hand.razor
+++ b/code/Blazora/Components/BGenerator_Header_Hand.razor
@@ -8,7 +8,7 @@
 }
 
 
-<BGenerator_Line_Stock />
+<BGenerator_Line_Stock parent=this />
 
 @{ 
     Resource_Stack stack_tool = get_stack_tool ();
@@ -25,7 +25,7 @@
     
     protected override void OnInitialized ()
     {
-        this.id = $"BGenerator_Header_Hand {get_result_resource_name ()}";
+        this.id = $"BGenerator_Header_Hand [{get_result_resource_name ()}]";
         base.OnInitialized ();
     }
 
