--- a/code/Blazora/Components/Cellicon.razor
+++ b/code/Blazora/Components/Cellicon.razor
@@ -145,7 +145,9 @@
                         val_current=stack_val_current
                         val_max=stack_val_max
                         background_color="#FF0000"
-                        fill_color="#00FF00" />
+                        fill_color="#00FF00" 
+                        parent=this
+                     />
     }
 
     <!-- border -->
