--- a/code/Blazora/Components/BGenerator_Line_Stock.razor
+++ b/code/Blazora/Components/BGenerator_Line_Stock.razor
@@ -13,7 +13,7 @@
 
 
 @{ 
-    Console.WriteLine ("generate Blazor " + this.id);
+    display_name ();
 }
 
 @for (int i = 0; i < this.recipe.get_component_count (); i++)
@@ -36,7 +36,7 @@
                 position=@(new Position (s * 3, s * i, s, s))
                 action=@(() =>
                          {
-                             Console.WriteLine ($"{component_stack.resource_name}_in_tool_kind");
+                             //Console.WriteLine ($"{component_stack.resource_name}_in_tool_kind");
                              Manager_Resource.resource_transfer (
                                  Game_Engine.self.manager_resource,
                                  this.generator.manager_resource,
