--- a/code/Blazora/Components/BGenerator_Header_Hand.razor
+++ b/code/Blazora/Components/BGenerator_Header_Hand.razor
@@ -2,6 +2,8 @@
 @using BlazorApp.Shared.Models
 @using NS_Manager_Resource
 @using NS_Game_Engine
+@using Blazora.Script
+ 
 
 @code{
 
@@ -15,21 +17,51 @@
 
 @{ 
     Resource_Stack stack_tool = get_stack_tool ();
+
 }
 
 
-<!-- Line 1 -->
-<Cellicon picture_filename=@(Resource.from_resource_name_get_resource_filename (stack_tool.resource_name))
-            position=@(new Position (s*4, s*(this.recipe.get_component_count ()-1), s, s))
-            />
+    <Cellicon 
+              picture_filename=@(Resource.from_resource_name_get_resource_filename (stack_tool.resource_name))
+              position=@(new Position (s * 4, s * (this.recipe.get_component_count () - 1), s, s))
+              text_middle_right=""
+              />
+
+
+@if (stack_tool.resource_name == "fire" && Game_Engine.self.manager_toggle.is_true ("know_furnace") == true)
+{
+    <Cellicon 
+              picture_filename=@(Resource.from_resource_name_get_resource_filename ("furnace_stone"))
+              position=@(new Position (s * 5, s * (this.recipe.get_component_count () - 1), s, s))
+              text_middle_right="^"
+              action=@(() => Game_Action.upgrade_tool (this.generator_id, "furnace_stone"))
+              />
+}
+else if (stack_tool.resource_name == "hand" && Game_Engine.self.manager_toggle.is_true ("know_assembling_machine_1") == true)
+{
+    <Cellicon 
+              picture_filename=@(Resource.from_resource_name_get_resource_filename ("assembling_machine_1"))
+              position=@(new Position (s * 5, s * (this.recipe.get_component_count () - 1), s, s))
+              text_middle_right="^"
+              action=@(() => Game_Action.upgrade_tool (this.generator_id, "assembling_machine_1"))
+              />
+}
 
 
 @code{
-    
+
     protected override void OnInitialized ()
     {
         this.id = $"BGenerator_Header_Hand [{get_result_resource_name ()}]";
         base.OnInitialized ();
     }
+
+
+    public override void listener_setup ()
+    {
+        base.listener_setup ();
+        //listener_add (() => Game_Engine.self.manager_toggle.is_true ("know_furnace"));
+    }
+
 
 }
