--- a/code/Blazora/Components/BGenerator_Header_Pickaxe.razor
+++ b/code/Blazora/Components/BGenerator_Header_Pickaxe.razor
@@ -2,6 +2,7 @@
 @using BlazorApp.Shared.Models
 @using NS_Manager_Resource
 @using NS_Game_Engine
+@using Blazora.Script
 
 @code {
 
@@ -36,11 +37,24 @@
 }
 
 
-
 <!-- Line 1 -->
-<Cellicon picture_filename=@(Resource.from_resource_name_get_resource_filename (stack_tool.resource_name))
-            position=@(new Position (s * 1, s * (this.recipe.get_component_count () - 1), s, s))
-            />
+
+    <Cellicon picture_filename=@(Resource.from_resource_name_get_resource_filename (stack_tool.resource_name))
+                position=@(new Position (s * 4, s * (this.recipe.get_component_count () - 1), s, s))
+                />
+
+
+@if (Game_Engine.self.manager_toggle.is_true ("know_burner_drill") == true)
+{
+    <Cellicon picture_filename=@(Resource.from_resource_name_get_resource_filename ("burner_drill"))
+                position=@(new Position (s * 5, s * (this.recipe.get_component_count () - 1), s, s))
+                text_middle_right="^"
+                action=@(() => Game_Action.upgrade_tool (this.generator_id, "burner_drill"))
+                />
+}
+
+
+
 @code{
     
     protected override void OnInitialized ()
