--- a/code/Blazora/Components/Game_Component.razor
+++ b/code/Blazora/Components/Game_Component.razor
@@ -79,7 +79,7 @@
 
     public void display_name ()
     {
-        Console.WriteLine ("generate Blazor " + this.id);
+        //Console.WriteLine ("(R) " + this.id);
     }
 
 
