--- a/code/Blazora/Components/BGenerator/BGenerator.razor
+++ b/code/Blazora/Components/BGenerator/BGenerator.razor
@@ -59,9 +59,6 @@
     }
 
 
-    @{ 
-        string result_resource_name = get_result_resource_name ();
-    }
 
 
 
@@ -69,23 +66,9 @@
 
     @{ int start_line = this.recipe.get_component_count () - 1;}
 
-    @{ 
-        int stack_resource_quantity_max = Resource.from_resource_name_get_stack_resource_quantity_max (result_resource_name);
-    }
 
-    <Cellicon picture_filename=@(Resource.from_resource_name_get_resource_filename (result_resource_name))
+    <BGenerator_Upgrade_Button 
               position=@(new Position (s*7, s*(start_line+0), s, s))
-              action=@(() => 
-                       {
-                           //Console.WriteLine ("resource upgrade");
-                           Game_Action.action_upgrade (this.recipe);
-                       })
-              val_authorize=@(Game_Action.action_upgrade_is_ready (this.recipe))
-              text_top_right=@($"{stack_resource_quantity_max*2}")
-              text_middle_right="^"
-              text_bottom_right=@($"Lv{stack_resource_quantity_max}")
-              stack_val_current=@(get_stock_quantity (result_resource_name))
-              stack_val_max=@(get_stock_max (result_resource_name))
               parent=this
             />
 
@@ -95,7 +78,7 @@
 
     
 
-    <Chest 
+    <BGenerator_Chest 
            position=@(new Position (s*0, s*(start_line+1), s*8, s*1))
            parent=this
            />
@@ -119,10 +102,9 @@
                 />
 
 
-    <Cellicon picture_filename=@(Resource.from_resource_name_get_resource_filename (result_resource_name))
+    <BGenerator_Total_Info 
                 position=@(new Position (s*7, s*(start_line+2), s, s))
-                text_top_right=@($"+{get_result_val ()}")
-                text_bottom_right=@($"{get_stock_val (result_resource_name)}")
+                parent=this
                 />
 
 
@@ -161,10 +143,10 @@
         base.listener_setup ();
 
         //Console.WriteLine ("listener setup");
-        listener_add ("BGenerator tool", get_stack_tool ().observable_quantity);
-        listener_add ("BGenerator stock_quantity", get_stock_quantity (get_result_resource_name ()));
+        //listener_add ("BGenerator tool", get_stack_tool ().observable_quantity);
+        //listener_add ("BGenerator stock_quantity", get_stock_quantity (get_result_resource_name ()));
         //listener_add ("BGenerator stock_max", get_stock_max (get_result_resource_name ()));
-        listener_add ("BGenerator stack_max", get_stack_quantity_max (get_result_resource_name ()));
+        //listener_add ("BGenerator stack_max", get_stack_quantity_max (get_result_resource_name ()));
         //listener_add (() => Game_Action.from_recipe_get_job_time_percentage (this.recipe) != 0);
 
         foreach (string resource_name in this.recipe.mix_component.get_list_resource_name ())
